--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "lynt"
   },
   "dependencies": {
     "prerender-spa-plugin": "^3.4.0",
@@ -17,8 +17,11 @@
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
-    "lint-staged": "^7.2.2",
+    "husky": "^1.1.3",
+    "lint-staged": "^7.3.0",
+    "lynt": "^0.5.4",
     "node-sass": "^4.9.0",
+    "prettier": "^1.14.3",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
   },
@@ -47,11 +50,11 @@
     "not ie <= 8"
   ],
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged && npm run lint"
   },
   "lint-staged": {
-    "*.js": [
-      "vue-cli-service lint",
+    "*.{js,json,css,md}": [
+      "prettier --config .prettierrc --write",
       "git add"
     ],
     "*.vue": [
